--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Mingliang Guo"
+  name   : "Mingliang"
   avatar : "/assets/images/bio-photo.png"
   bio    : "A programmer loves exploring the world!"
   # links:
